# Triangular-Arbitrage

./: .coverage 2  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG_v1.3.0.md  CLEAR_COOLDOWN_IMPLEMENTATION.md  COOLDOWN_PERSISTENCE.md  DASHBOARD_FEATURES.md  DEDUPLICATION_FIX.md  DEX_QUICKSTART.md  DUPLICATE_SUPPRESSION_IMPLEMENTATION.md  Dockerfile  EXECUTION_ENGINE_DOCS 2.md  EXECUTION_ENGINE_DOCS.md  FIXES_APPLIED.md  GIT_COMMIT_MESSAGE.md  Makefile  OPERATOR_TOOLKIT_SUMMARY.md  OPTIMIZED_CONFIGS_GUIDE.md  PERFORMANCE_ENHANCEMENTS.md  PR_READY_CHECKLIST.md  PR_TEMPLATE.md  README.md  RISK_CONTROLS_IMPLEMENTATION.md  SUPPRESSED_VIEW_IMPLEMENTATION.md  TRADING_SETUP.md  WEB_DASHBOARD_README.md  check_coinbase_markets.py  check_status.sh  coinbase_adapter.py  cross_exchange_arbitrage.py  decision_engine.py  deploy_testnet.sh  docker-compose.dev.yml  docker-compose.yml  docs_generated_readme.md  equity_tracker.py  fresh_arbitrage.py  (+38 more)
.claude/: anthropic_key.sh
backtests/: run_backtest.py  run_dex_paper.py
cex/: README.md  __init__.py  constants.py
configs/: dex_arbitrum_optimized.yaml  dex_base_dynamic.yaml  dex_base_optimized.yaml  dex_bsc_dynamic.yaml  dex_mev.example.yaml  dex_mev.yaml  dex_mev_eth_dynamic.yaml  dex_mev_eth_test.yaml
configs/exchanges/: exchange_6_config.ini
configs/notifications/: notifier_2.json
configs/strategies/: strategy_1.yaml  strategy_1.yml  strategy_10.yaml  strategy_10.yml  strategy_11.yaml  strategy_12.yaml  strategy_13.yaml  strategy_14.yaml  strategy_15.yaml  strategy_16.yaml  strategy_17.yaml  strategy_18.yaml  strategy_19.yaml  strategy_2.yaml  strategy_2.yml  strategy_20.yaml  strategy_21.yaml  strategy_22.yaml  strategy_23.yaml  strategy_24.yaml  strategy_25.yaml  strategy_26.yaml  strategy_27.yaml  strategy_28.yaml  strategy_29.yaml  strategy_3.yaml  strategy_3.yml  strategy_30.yaml  strategy_31.yaml  strategy_32.yaml  strategy_33.yaml  strategy_34.yaml  strategy_35.yaml  strategy_36.yaml  strategy_37.yaml  strategy_38.yaml  strategy_39.yaml  strategy_4.yaml  strategy_4.yml  strategy_40.yaml  (+23 more)
contracts/: FlashArbitrage.sol
data/cycles/: binance_cycles_1.csv  binance_cycles_10.csv  binance_cycles_11.csv  binance_cycles_12.csv  binance_cycles_13.csv  binance_cycles_14.csv  binance_cycles_15.csv  binance_cycles_16.csv  binance_cycles_17.csv  binance_cycles_18.csv  binance_cycles_19.csv  binance_cycles_2.csv  binance_cycles_20.csv  binance_cycles_21.csv  binance_cycles_22.csv  binance_cycles_23.csv  binance_cycles_24.csv  binance_cycles_25.csv  binance_cycles_26.csv  binance_cycles_27.csv  binance_cycles_28.csv  binance_cycles_29.csv  binance_cycles_3.csv  binance_cycles_30.csv  binance_cycles_4.csv  binance_cycles_5.csv  binance_cycles_6.csv  binance_cycles_7.csv  binance_cycles_8.csv  binance_cycles_9.csv  bybit_cycles_1.csv  bybit_cycles_10.csv  bybit_cycles_11.csv  bybit_cycles_12.csv  bybit_cycles_13.csv  bybit_cycles_14.csv  bybit_cycles_15.csv  bybit_cycles_16.csv  bybit_cycles_17.csv  bybit_cycles_18.csv  (+110 more)
dex/: __init__.py  abi.py  config.py  execution_wrapper.py  executor.py  live_costs.py  opportunity_math.py  pool_quality.py  route_deduplication.py  runner.py  slippage.py  types.py
dex/adapters/: __init__.py  v2.py  v3.py
docs/: COOLDOWN_PERSISTENCE.md  EXECUTION_ENGINE_DOCS 2.md  EXECUTION_ENGINE_DOCS.md  GIT_COMMIT_MESSAGE.md  METRICS_NAMING.md  OPERATOR_TOOLKIT_SUMMARY.md  PERFORMANCE_ENHANCEMENTS.md  grafana_setup.md
docs/implementation/: CLEAR_COOLDOWN_IMPLEMENTATION.md  DUPLICATE_SUPPRESSION_IMPLEMENTATION.md  RISK_CONTROLS_IMPLEMENTATION.md  SUPPRESSED_VIEW_IMPLEMENTATION.md
examples/: risk_controls_demo.py
monitoring/: prometheus.yml
scripts/: README.md  check_pair.py  find_pools.py  scan_base_pairs.py
scripts/sims/: sim_1.py  (+19 more)
tests/: test_breakeven_math.py  test_clear_all_cooldowns.py  test_clear_cooldown_acceptance.py  test_clear_cooldown_cli.py  test_cooldown_persistence_acceptance.py  test_decision_engine.py  test_detector.py  test_dex_paper.py  test_duplicate_suppression.py  test_duplicate_suppression_cli.py  test_dynamic_thresholds.py  test_exec_price_sources.py  test_extend_cooldown_cli.py  test_format_profit.py  test_monitor_cooldowns.py  test_ops_cli.py  test_ops_snapshot.py  test_paper_live_chain.py  test_risk_controls.py  test_suppressed_view_cli.py  test_suppression_summary_cli.py  test_web_server_dex.py
tools/: bump_version.py  validate_config.py
triangular_arbitrage/: __init__.py  config_loader.py  config_schema.py  constants.py  detector.py  enhanced_recovery_manager.py  exceptions.py  exchange.py  execution_engine 2.py  execution_engine.py  execution_helpers.py  execution_types.py  gnn_optimizer.py  interfaces.py  metrics.py  risk_controls.py  slippage_monitor.py  trade_executor.py  utils.py  version.py  web_dex_router.py  web_security.py
triangular_arbitrage_dex/: README.md  __init__.py  dex_v2_arb.py
web_ui/: .env.example  package-lock.json  package.json
(+83 files in other folders)
